--- a/files/Markdown/PO33Q Assessment Template.Rmd
+++ b/files/Markdown/PO33Q Assessment Template.Rmd
@@ -1,6 +1,6 @@
 ---
 title: |
-  | \includegraphics[width=0.2\textwidth]{Crest.png}
+  | \includegraphics[width=0.15\textwidth]{Crest.png}
   |
   |
   | Summative Assessment
@@ -27,7 +27,8 @@ header-includes:
 
 \thispagestyle{empty}
 \vfill
-\hfill \includegraphics[width=0.2\textwidth]{Warwick.png}
+\centering
+\includegraphics[width=0.25\textwidth]{Warwick.png}
 
 \newpage
 ```{=latex}
