--- a/files/Markdown/PO33Q Assessment Template.Rmd
+++ b/files/Markdown/PO33Q Assessment Template.Rmd
@@ -27,8 +27,9 @@ header-includes:
 
 \thispagestyle{empty}
 \vfill
-\centering
+\begin{center}
 \includegraphics[width=0.25\textwidth]{Warwick.png}
+\end{center}
 
 \newpage
 ```{=latex}
