--- a/files/Markdown/PO33Q Assessment Template.Rmd
+++ b/files/Markdown/PO33Q Assessment Template.Rmd
@@ -21,7 +21,7 @@ header-includes:
       \parbox[b][0.6\textheight]{0.85\textwidth}{%
         \vspace{3\baselineskip} % <<< move text down relative to top of rule
         {\noindent\LARGE\bfseries PO33Q - Determinants of Democracy:\\Analysing Emergence, Survival, and Fall\\}\\[1\baselineskip]
-        {\noindent\large\bfseries Summative Assessment\\}\\[2\baselineskip]
+        {\noindent\Large\bfseries Summative Assessment\\}\\[2\baselineskip]
         {\large \textit{\textbf{Warwick ID:} u1234567}}\\
         \vfill
         {\large Number of Words: XXXX}\\
