--- a/files/Markdown/PO33Q Assessment Template.Rmd
+++ b/files/Markdown/PO33Q Assessment Template.Rmd
@@ -1,4 +1,3 @@
-
 ---
 title: ""
 output: 
@@ -247,9 +246,9 @@ models <- list(
 
 # Coefficient map: named vector where names = original terms, values = display labels
 cm <- c(
-  "(Intercept)" = "Constant",
   "education"   = "Years of Education",
-  "income"      = "Average Income"
+  "income"      = "Average Income",
+  "(Intercept)" = "Constant"
 )
 
 # Create the modelsummary table
